# turbo-sticks

./: .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  getenv.py  pyproject.toml  requirements.txt  setup.cfg  sticks-uwsgi.example.ini  sticks_bot.py  test_requirements.txt  turbo-config.example.yaml  turbo-sticks.wsgi  turbo_ajax.py  turbo_bridge.py  turbo_config.example.py  turbo_config.py  turbo_cron.py  turbo_csrf.py  turbo_db.py  turbo_discord.py  turbo_nav.py  turbo_patreon.py  turbo_properties.py  turbo_session.py  turbo_templates.py  turbo_user.py  turbo_util.py  turbo_views.py  turbo_websockets.py
.github/workflows/: tests.yml
requirements/: compile.sh
setup/: initdb.sql  setup.sh  upgradedb-v2.1.sql  upgradedb-v2.2.sql  upgradedb-v2.3.sql
setup/js/: .directory  chat.js  compile.sh  scripts.js  ui.js
setup/scss/: .directory  _fonts.scss  _global.scss  _prefixed.scss  chat.scss  compile.sh  config.json  config_reduce_declarations.json  prefixed.scss  stream.scss  style.scss
src/turbo_sticks/: __init__.py  ajax.py  bot.py  config.py  csrf.py  db.py  discord.py  enums.py  navigation.py  patreon.py  properties.py  session.py  templates.py  types.py  user.py  util.py  views.py  websockets.py  wsgi.py
src/turbo_sticks/templates/blocks/: header.html  html_header.html
src/turbo_sticks/templates/pages/: chat.html  error.html  rules.html  stream.html  stream_embed.html  theatre_admin.html  theatre_auth.html  youtube_embed.html
src/turbo_sticks_scripts/: retrieve_discord_ids.py  retrieve_patreon_ids.py  sticks_bot.py  sticks_cron.py  sticks_server.py
static/: .directory  browserconfig.xml  site.webmanifest
static/fonts/: Bitter-LICENSE  NotoSans-LICENSE  heydings_controls-LICENSE
templates/blocks/: footer.html  html_header.html
templates/pages/: account.html  chat.html  chat_headless.html  error_headless.html  legacy_theatre.html  main.html  oven_embed.html  rules.html  stream.html  stream_embed.html  stream_headless.html  theatre.html  theatre_auth.html  theatre_headless.html
tests/: conftest.py  test_ajax.py  test_bot.py  test_config.py  test_csrf.py  test_discord.py  test_navigation.py  test_patreon.py  test_properties.py  test_session.py  test_templates.py  test_user.py  test_util.py  test_views.py  test_websockets.py  test_wsgi.py
tests/fixtures/: patreon_campaigns.json  patreon_identity.json  patreon_members.json  test-config.yaml
tools/: retrieve_discord_ids.py  retrieve_patreon_ids.py
