[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build_backend = "setuptools.build_meta"


[tool.bandit]
skips = ["B101"]

[tool.pytest.ini_options]
addopts = "-ra -q --cov --no-success-flaky-report"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
branch = true
source = ["turbo_sticks"]
omit = ["tests/*"]
concurrency = ["greenlet"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "@overload",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
    "raise NotImplementedError",
    "if not self.live_channel_id:"
]

[tool.mypy]
python_version = "3.10"
namespace_packages = true
explicit_package_bases = true
follow_imports = "silent"
warn_redundant_casts = true
warn_unreachable = true
warn_unused_ignores = true
plugins = ["pydantic.mypy"]
mypy_path = "$MYPY_CONFIG_FILE_DIR/src"

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliased = true
warn_untyped_fields = true

[[tool.mypy.overrides]]
module = "turbo_sticks.*"
disallow_any_generics = true
disallow_untyped_defs = true
