[metadata]
name = turbo-sticks
version = attr: turbo_sticks.__version__
author = David Salvisberg
author_email = dave@daverball.com
description = TURBO Sticks is an authentication bridge between various TURBO services.
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD 2-Clause License
url = https://github.com/ffsit/turbo-sticks
project_urls =
    Bug Tracker = https://github.com/ffsit/turbo-sticks/issues
classifiers =
    Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
include_package_data = True
python_requires = >=3.10
install_requires =
    aiodns ==3.1.1
    aiohttp ==3.9.1
    async-timeout ==4.0.3
    certifi ==2023.11.17
    cffi ==1.16.0
    charset-normalizer ==3.2.0
    discord.py ==2.3.2
    cryptography ==41.0.7
    gevent ==23.9.1
    greenlet ==3.0.2
    idna ==3.6
    oauthlib ==3.2.2
    redis ==4.6.0
    requests ==2.31.0
    requests-oauthlib ==1.3.1
    psycopg[c] ==3.1.15
    psycopg-pool ==3.2.0
    pydantic ==2.5.2
    pydantic-core ==2.14.5
    pydantic-settings ==2.1.0
    PyYAML ==6.0.1
    typing_extensions ==4.9.0
    urllib3 ==2.1.0
    zope.event ==5.0
    zope.interface ==6.1

[options.extras_require]
tests =
    bandit[toml] ==1.7.6
    coverage[toml] ==7.3.3
    dpytest ==0.7.0
    flake8 ==6.1.0
    flake8-bugbear == 23.12.2
    flaky ==3.7.0
    mypy ==1.7.1
    pre-commit ==3.6.0
    pytest ==7.4.3
    pytest-asyncio ==0.23.2
    pytest-cov ==4.1.0
    pytest-gevent ==1.1.0
    pytest-postgresql ==5.0.0
    pytest-redis ==3.0.2
    time-machine ==2.13.0
    types-gevent ==23.9.0.1
    types-greenlet ==3.0.0.0
    types-oauthlib ==3.2.0.10
    types-psutil ==5.9.5.17
    types-pyOpenSSL ==23.3.0.0
    types-pyYAML ==6.0.12.12
    types-redis ==4.6.0.11
    types-requests ==2.31.0.10
    types-requests-oauthlib ==1.3.0.1
    types-uWSGI ==2.0.0.1
uwsgi =
    uwsgi ==2.0.23

[options.package_data]
turbo_sticks =
    templates/blocks/*.html
    templates/pages/*.html
    py.typed

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    sticks-cron = turbo_sticks_scripts.sticks_cron:main
    sticks-bot = turbo_sticks_scripts.sticks_bot:main
    sticks-server = turbo_sticks_scripts.sticks_server:main
    retrieve-discord-ids = turbo_sticks_scripts.retrieve_discord_ids:main
    retrieve-patreon-ids = turbo_sticks_scripts.retrieve_patreon_ids:main

[flake8]
extend-select = B901,B903,B904,B908
