[metadata]
name = turbo-sticks
version = attr: turbo_sticks.__version__
author = David Salvisberg
author_email = dave@daverball.com
description = TURBO Sticks is an authentication bridge between various TURBO services.
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD 2-Clause License
url = https://github.com/ffsit/turbo-sticks
project_urls =
    Bug Tracker = https://github.com/ffsit/turbo-sticks/issues
classifiers =
    Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: Implementation :: CPython
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
include_package_data = True
python_requires = >=3.12
install_requires =
    aiodns
    aiohttp
    async-timeout
    certifi
    cffi
    charset-normalizer
    discord.py
    cryptography
    gevent
    greenlet
    idna
    oauthlib
    redis
    requests
    requests-oauthlib
    psycopg[c]
    psycopg-pool
    pydantic
    pydantic-core
    pydantic-settings
    PyYAML
    typing_extensions
    urllib3
    zope.event
    zope.interface

[options.extras_require]
dev =
    bandit[toml]
    coverage[toml]
    dpytest
    flake8
    flake8-bugbear
    flaky
    mypy
    pre-commit
    pre-commit-uv
    pytest
    pytest-asyncio
    pytest-cov
    pytest-gevent
    pytest-postgresql
    pytest-redis
    time-machine
    types-gevent
    types-greenlet
    types-oauthlib
    types-psutil
    types-pyOpenSSL
    types-pyYAML
    types-redis
    types-requests
    types-requests-oauthlib
    types-uWSGI
    uv
uwsgi =
    uwsgi

[options.package_data]
turbo_sticks =
    templates/blocks/*.html
    templates/pages/*.html
    py.typed

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    sticks-cron = turbo_sticks_scripts.sticks_cron:main
    sticks-bot = turbo_sticks_scripts.sticks_bot:main
    sticks-server = turbo_sticks_scripts.sticks_server:main
    retrieve-discord-ids = turbo_sticks_scripts.retrieve_discord_ids:main
    retrieve-patreon-ids = turbo_sticks_scripts.retrieve_patreon_ids:main

[flake8]
extend-select = B901,B903,B904,B908
